# TalktoPDFMultilingual

./: README.md  main.py  pyproject.toml
faiss_index/: index.faiss  index.pkl
talk2pdf-multilingual-main/: .env  README.md  app.py  main.py  requirements.txt  style.css
talk2pdf-multilingual-main/faiss_index/: index.pkl
