[project]
name = "talk2pdf-multilingual-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "faiss-cpu>=1.13.2",
    "google-genai>=1.59.0",
    "google-generativeai>=0.5.4",
    "langchain>=0.2.17",
    "langchain-community>=0.2.19",
    "langchain-google-genai==1.0.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.0",
]
